@@ -51,7 +51,7 @@ module glide_setup
 
   private
   public :: glide_readconfig, glide_printconfig, glide_scale_params, &
-       glide_calclsrf, glide_marinlim, glide_load_sigma, glide_maskthck, &
+       glide_calclsrf, glide_marinlim, glide_load_sigma, &
        glide_read_sigma, glide_calc_sigma
 
 contains
@@ -157,80 +157,6 @@ contains
     end if
 
   end subroutine glide_read_sigma
-
-!-------------------------------------------------------------------------
-
-  subroutine glide_maskthck(crita,critb,pointno,totpts,empty)
-    
-    !*FD Calculates the contents of the mask array.
-
-    use glimmer_global, only : dp, sp 
-
-    implicit none
-
-    !-------------------------------------------------------------------------
-    ! Subroutine arguments
-    !-------------------------------------------------------------------------
-
-    real(dp),dimension(:,:),intent(in)  :: crita      !*FD Ice thickness
-    real(sp),dimension(:,:),intent(in)  :: critb      !*FD Mass balance
-    integer, dimension(:,:),intent(out) :: pointno    !*FD Output mask
-    integer,                intent(out) :: totpts     !*FD Total number of points
-    logical,                intent(out) :: empty      !*FD Set if no mask points set.
-
-    !-------------------------------------------------------------------------
-    ! Internal variables
-    !-------------------------------------------------------------------------
-
-    integer :: covtot 
-    integer :: ew,ns,ewn,nsn
-
-    !-------------------------------------------------------------------------
-
-    ewn=size(crita,1) ; nsn=size(crita,2)
-
-    pointno = 0
-    covtot  = 0 
-
-    !-------------------------------------------------------------------------
-
-    empty = .true.
-
-    do ns = 1,nsn
-      do ew = 1,ewn
-        if ( thckcrit(crita(max(1,ew-1):min(ewn,ew+1),max(1,ns-1):min(nsn,ns+1)),critb(ew,ns)) ) then
-
-          covtot = covtot + 1
-          pointno(ew,ns) = covtot 
-          if (empty) empty  = .false.
-
-        end if
-      end do
-    end do
-  
-    totpts = covtot
- 
-  end subroutine glide_maskthck
-  
-  logical function thckcrit(ca,cb)
-
-    use glimmer_global, only: sp,dp
-
-    implicit none
-
-    real(dp),dimension(:,:),intent(in) :: ca 
-    real(sp),               intent(in) :: cb
-
-    ! If the thickness in the region under consideration
-    ! or the mass balance is positive, thckcrit is .true.
-
-    if ( any((ca(:,:) > 0.0d0)) .or. cb > 0.0 ) then
-       thckcrit = .true.
-    else
-       thckcrit = .false.
-    end if
-
-  end function thckcrit
 
   subroutine glide_calclsrf(thck,topg,eus,lsrf)
 
